--- a/config/services.yaml
+++ b/config/services.yaml
@@ -92,32 +92,22 @@ services:
               !php/const App\Model\RemoteRequestActionInterface::ACTION_GET: '%update_retry_limit%'
               !php/const App\Model\RemoteRequestActionInterface::ACTION_EXISTS: '%exists_retry_limit%'
 
-    app.message_dispatcher.create:
-        class: App\MessageDispatcher\MachineRequestMessageDispatcher
-
-    app.message_dispatcher.update_machine:
-        class: App\MessageDispatcher\MachineRequestMessageDispatcher
+    app.message_dispatcher.get.configuration:
+        class: App\Model\MachineRequestDispatcherConfiguration
         arguments:
             $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
 
-    app.message_dispatcher.machine_exists:
-        class: App\MessageDispatcher\MachineRequestMessageDispatcher
+    app.message_dispatcher.exists.configuration:
+        class: App\Model\MachineRequestDispatcherConfiguration
         arguments:
             $dispatchDelayInSeconds: '%machine_exists_dispatch_delay%'
             $initialDispatchDelayInSeconds: '%machine_exists_initial_dispatch_delay%'
 
-    App\MessageHandler\CreateMachineHandler:
+    App\MessageDispatcher\MachineRequestMessageDispatcher:
         arguments:
-            $createDispatcher: '@app.message_dispatcher.create'
-            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
-
-    App\MessageHandler\UpdateMachineHandler:
-        arguments:
-            $updateMachineDispatcher: '@app.message_dispatcher.update_machine'
-
-    App\MessageHandler\MachineExistsHandler:
-        arguments:
-            $machineExistsDispatcher: '@app.message_dispatcher.machine_exists'
+            $configurations:
+                !php/const App\Model\RemoteRequestActionInterface::ACTION_GET: '@app.message_dispatcher.get.configuration'
+                !php/const App\Model\RemoteRequestActionInterface::ACTION_EXISTS: '@app.message_dispatcher.exists.configuration'
 
     App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
         arguments:
