--- a/.env
+++ b/.env
@@ -41,8 +41,7 @@ DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
 DIGITALOCEAN_TAG=worker
 CREATE_RETRY_LIMIT=3
-UPDATE_MACHINE_DISPATCH_DELAY=10
-UPDATE_RETRY_LIMIT=10
+GET_RETRY_LIMIT=10
 MACHINE_EXISTS_DISPATCH_DELAY=10
 MACHINE_EXISTS_INITIAL_DISPATCH_DELAY=1
 EXISTS_RETRY_LIMIT=10
