--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,10 +12,11 @@ parameters:
     digitalocean_droplet_tag: '%env(DIGITALOCEAN_TAG)%'
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
     update_machine_dispatch_delay: '%env(UPDATE_MACHINE_DISPATCH_DELAY)%'
-    update_retry_limit: '%env(UPDATE_RETRY_LIMIT)%'
+    get_retry_limit: '%env(GET_RETRY_LIMIT)%'
     machine_exists_dispatch_delay: '%env(MACHINE_EXISTS_DISPATCH_DELAY)%'
     machine_exists_initial_dispatch_delay: '%env(MACHINE_EXISTS_INITIAL_DISPATCH_DELAY)%'
     exists_retry_limit: '%env(EXISTS_RETRY_LIMIT)%'
+    machine_is_active_dispatch_delay: '%env(MACHINE_IS_ACTIVE_DISPATCH_DELAY)%'
 
 services:
     # default configuration for services in *this* file
@@ -89,13 +90,8 @@ services:
                 - '@App\Services\RemoteRequestRetryDecider\DigitalOcean\DigitalOceanRemoteRequestRetryDecider'
             $retryLimits:
               !php/const App\Model\RemoteRequestActionInterface::ACTION_CREATE: '%create_retry_limit%'
-              !php/const App\Model\RemoteRequestActionInterface::ACTION_GET: '%update_retry_limit%'
+              !php/const App\Model\RemoteRequestActionInterface::ACTION_GET: '%get_retry_limit%'
               !php/const App\Model\RemoteRequestActionInterface::ACTION_EXISTS: '%exists_retry_limit%'
-
-    app.message_dispatcher.get.configuration:
-        class: App\Model\MachineRequestDispatcherConfiguration
-        arguments:
-            $dispatchDelayInSeconds: '%update_machine_dispatch_delay%'
 
     app.message_dispatcher.exists.configuration:
         class: App\Model\MachineRequestDispatcherConfiguration
@@ -103,11 +99,16 @@ services:
             $dispatchDelayInSeconds: '%machine_exists_dispatch_delay%'
             $initialDispatchDelayInSeconds: '%machine_exists_initial_dispatch_delay%'
 
+    app.message_dispatcher.machine_is_active.configuration:
+        class: App\Model\MachineRequestDispatcherConfiguration
+        arguments:
+            $dispatchDelayInSeconds: '%machine_is_active_dispatch_delay%'
+
     App\MessageDispatcher\MachineRequestMessageDispatcher:
         arguments:
             $configurations:
-                App\Message\UpdateMachine: '@app.message_dispatcher.get.configuration'
                 App\Message\MachineExists: '@app.message_dispatcher.exists.configuration'
+                App\Message\CheckMachineIsActive: '@app.message_dispatcher.exists.configuration'
 
     App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
         arguments:
