--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -3,6 +3,12 @@ services:
         autowire: true
         autoconfigure: true
 
+    App\MessageHandler\GetMachineHandler:
+        public: true
+
+    App\MessageHandler\CheckMachineIsActiveHandler:
+        public: true
+
     Symfony\Component\Messenger\Transport\InMemoryTransport:
         alias: 'messenger.transport.async'
 
