--- a/.env
+++ b/.env
@@ -46,3 +46,4 @@ MACHINE_EXISTS_DISPATCH_DELAY=10
 MACHINE_EXISTS_INITIAL_DISPATCH_DELAY=1
 EXISTS_RETRY_LIMIT=10
 MACHINE_IS_ACTIVE_DISPATCH_DELAY=10
+DELETE_RETRY_LIMIT=10
