--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Setup integration environment
         run: composer integration-setup
 
-      - name: Run synchronous tests
-        env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_API_TOKEN_TEST }}
-        run: composer test-integration-sync
+#      - name: Run synchronous tests
+#        env:
+#          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_API_TOKEN_TEST }}
+#        run: composer test-integration-sync
 
       - name: Run asynchronous tests
         env:
