Wait a little after starting up integration environment

--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -40,7 +40,9 @@ jobs:
         uses: satackey/action-docker-layer-caching@v0.0.11
 
       - name: Setup integration environment
-        run: composer integration-setup
+        run: |
+          composer integration-setup
+          sleep 1
 
 #      - name: Run synchronous tests
 #        env:
