--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -40,12 +40,9 @@ jobs:
         uses: satackey/action-docker-layer-caching@v0.0.11
 
       - name: Setup integration environment
-        run: composer integration-setup
-
-      - name: Run synchronous tests
-        env:
-          DIGITALOCEAN_ACCESS_TOKEN: ${{ secrets.DIGITALOCEAN_API_TOKEN_TEST }}
-        run: composer test-integration-sync
+        run: |
+          composer integration-setup
+          sleep 5
 
       - name: Run asynchronous tests
         env:
