Use Use webignition/symfony-messenger-json-message-serializer-bundle

--- a/config/packages/test/messenger.yaml
+++ b/config/packages/test/messenger.yaml
@@ -2,6 +2,7 @@ framework:
     messenger:
         transports:
             async: 'in-memory://'
+            serializer: 'webignition\JsonMessageSerializerBundle\Services\Serializer'
 
         routing:
             '*': async
