--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/monolog-bundle": "^3.6",
         "symfony/proxy-manager-bridge": "5.2.*",
         "symfony/yaml": "5.2.*",
-        "toin0u/digitalocean-v2": "^4.2.1"
+        "toin0u/digitalocean-v2": "^4.2.1",
+        "webignition/symfony-messenger-json-message-serializer-bundle": "^0.2.0"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.5",
