--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -3,6 +3,7 @@ framework:
         transports:
             async:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                serializer: 'webignition\JsonMessageSerializerBundle\Services\Serializer'
 
         routing:
             '*': async
