--- a/config/services.yaml
+++ b/config/services.yaml
@@ -118,3 +118,12 @@ services:
             $factories:
                 - '@App\Services\ExceptionFactory\MachineProvider\DigitalOceanExceptionFactory'
                 - '@App\Services\ExceptionFactory\MachineProvider\GuzzleExceptionFactory'
+
+    webignition\JsonMessageSerializerBundle\Services\MessageFactory:
+        arguments:
+            $typeToMessageClassMap:
+                !php/const App\Message\CheckMachineIsActive::TYPE: 'App\Message\CheckMachineIsActive'
+                !php/const App\Message\CreateMachine::TYPE: 'App\Message\CreateMachine'
+                !php/const App\Message\DeleteMachine::TYPE: 'App\Message\DeleteMachine'
+                !php/const App\Message\GetMachine::TYPE: 'App\Message\GetMachine'
+                !php/const App\Message\MachineExists::TYPE: 'App\Message\MachineExists'
