--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/yaml": "5.2.*",
         "toin0u/digitalocean-v2": "^4.2.1",
         "webignition/basil-worker-manager-interfaces": ">=0.7,<1",
+        "webignition/basil-worker-manager-persistence-bundle": "^0.5.0",
         "webignition/symfony-messenger-json-message-serializer-bundle": "^0.2.0"
     },
     "require-dev": {
