Use webignition/symfony-messenger-message-dispatcher

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -90,13 +90,23 @@ services:
             $deciders:
                 - '@App\Services\RemoteRequestRetryDecider\DigitalOcean\DigitalOceanRemoteRequestRetryDecider'
 
-    App\MessageDispatcher\DelayedMessageMiddleware:
+    app.message_dispatcher.backoff_strategy.check_machine_is_active:
+        class: webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\FixedBackoffStrategy
         arguments:
-            $delays:
-                App\Message\CheckMachineIsActive: '%machine_is_active_dispatch_delay%'
-                App\Message\MachineExists: '%machine_exists_dispatch_delay%'
+            $delayInMilliseconds: '%machine_is_active_dispatch_delay%'
 
-    App\MessageDispatcher\RetryByLimitMiddleware:
+    app.message_dispatcher.backoff_strategy.machine_exists:
+        class: webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\FixedBackoffStrategy
+        arguments:
+            $delayInMilliseconds: '%machine_exists_dispatch_delay%'
+
+    webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\DelayedMessageMiddleware:
+        arguments:
+            $backoffStrategies:
+                App\Message\CheckMachineIsActive: '@app.message_dispatcher.backoff_strategy.check_machine_is_active'
+                App\Message\MachineExists: '@app.message_dispatcher.backoff_strategy.machine_exists'
+
+    webignition\SymfonyMessengerMessageDispatcher\Middleware\RetryByLimitMiddleware:
         arguments:
             $retryLimits:
                 App\Message\CreateMachine: '%create_retry_limit%'
@@ -104,11 +114,11 @@ services:
                 App\Message\DeleteMachine: '%delete_retry_limit%'
                 App\Message\MachineExists: '%exists_retry_limit%'
 
-    App\MessageDispatcher\MessageDispatcher:
+    webignition\SymfonyMessengerMessageDispatcher\MessageDispatcher:
         arguments:
             $middleware:
-                - '@App\MessageDispatcher\DelayedMessageMiddleware'
-                - '@App\MessageDispatcher\RetryByLimitMiddleware'
+                - '@webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\DelayedMessageMiddleware'
+                - '@webignition\SymfonyMessengerMessageDispatcher\Middleware\RetryByLimitMiddleware'
 
     App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
         arguments:
