--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "toin0u/digitalocean-v2": "^4.2.1",
         "webignition/basil-worker-manager-interfaces": ">=0.7,<1",
         "webignition/basil-worker-manager-persistence-bundle": "^0.5.0",
-        "webignition/symfony-messenger-json-message-serializer-bundle": "^0.2.0"
+        "webignition/symfony-messenger-json-message-serializer-bundle": "^0.2.0",
+        "webignition/symfony-messenger-message-dispatcher": ">=0.4,<1"
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.5",
