--- a/composer.json
+++ b/composer.json
@@ -107,11 +107,11 @@
             "@test-unit",
             "@test-functional"
         ],
-        "integration-pull": "docker-compose -f tests/docker/services-compose.yml pull",
-        "integration-start": "docker-compose -f tests/docker/services-compose.yml up -d",
-        "integration-status": "docker-compose -f tests/docker/services-compose.yml ps",
-        "integration-stop": "docker-compose -f tests/docker/services-compose.yml stop",
-        "integration-destroy": "docker-compose -f tests/docker/services-compose.yml down",
+        "integration-pull": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml pull",
+        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d",
+        "integration-status": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml ps",
+        "integration-stop": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml stop",
+        "integration-destroy": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml down",
         "integration-setup": [
             "@integration-start",
             "sleep 2",
