Rename machine name prefix parameter

--- a/.env
+++ b/.env
@@ -34,8 +34,8 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:9502/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
 
+MACHINE_NAME_PREFIX=dev
 DIGITALOCEAN_ACCESS_TOKEN=digitalocean_access_token
-DIGITALOCEAN_NAME_PREFIX=dev
 DIGITALOCEAN_REGION=lon1
 DIGITALOCEAN_SIZE=s-1vcpu-1gb
 DIGITALOCEAN_IMAGE=ubuntu-16-04-x64
