Pass prefixed machine name to provider-specific manager (#442)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,8 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    machine_name_prefix: '%env(MACHINE_NAME_PREFIX)%'
     digitalocean_access_token: '%env(DIGITALOCEAN_ACCESS_TOKEN)%'
-    digitalocean_droplet_name_prefix: '%env(DIGITALOCEAN_NAME_PREFIX)%'
     digitalocean_droplet_region: '%env(DIGITALOCEAN_REGION)%'
     digitalocean_droplet_size: '%env(DIGITALOCEAN_SIZE)%'
     digitalocean_droplet_image: '%env(DIGITALOCEAN_IMAGE)%'
@@ -78,7 +78,10 @@ services:
     App\Services\MachineManager\DigitalOceanMachineManager:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
-            $prefix: '%digitalocean_droplet_name_prefix%'
+
+    App\Services\MachineNameFactory:
+        arguments:
+            $environmentPrefix: '%machine_name_prefix%'
 
     App\Services\MachineManager\MachineManager:
         arguments:
