--- a/.env
+++ b/.env
@@ -46,3 +46,4 @@ MACHINE_EXISTS_DISPATCH_DELAY=5000
 EXISTS_RETRY_LIMIT=10
 MACHINE_IS_ACTIVE_DISPATCH_DELAY=10000
 DELETE_RETRY_LIMIT=10
+FIND_RETRY_LIMIT=3
