--- a/.github/workflows/tests-integration.yml
+++ b/.github/workflows/tests-integration.yml
@@ -3,8 +3,10 @@ name: Integration Tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   integration:
@@ -42,7 +44,7 @@ jobs:
       - name: Setup integration environment
         run: |
           composer integration-setup
-          sleep 5
+          sleep 10
 
       - name: Run asynchronous tests
         env:
