--- a/config/services.yaml
+++ b/config/services.yaml
@@ -80,19 +80,14 @@ services:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
 
+    App\Services\MachineManagerStack:
+        arguments:
+            $machineManagers:
+                - '@App\Services\DigitalOceanMachineManager'
+
     App\Services\MachineNameFactory:
         arguments:
             $environmentPrefix: '%machine_name_prefix%'
-
-    App\Services\MachineManager:
-        arguments:
-            $machineManagers:
-                - '@App\Services\DigitalOceanMachineManager'
-
-    App\Services\RemoteMachineFinder:
-        arguments:
-            $machineManagers:
-                - '@App\Services\DigitalOceanMachineManager'
 
     App\Services\RemoteRequestRetryDecider:
         arguments:
