--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,7 @@
         ],
         "db-setup": [
             "php bin/console doctrine:database:create --if-not-exists --quiet",
-            "php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration --quiet"
+            "php bin/console doctrine:schema:update --force --quiet"
         ],
         "db-destroy": [
             "php bin/console doctrine:database:drop --if-exists --force --quiet"
