--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
         "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/doctrine-bundle": "^2.2",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.0",
@@ -85,7 +84,7 @@
         ],
         "db-setup": [
             "php bin/console doctrine:database:create --if-not-exists --quiet",
-            "php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration --quiet"
+            "php bin/console doctrine:schema:update --force --quiet"
         ],
         "db-destroy": [
             "php bin/console doctrine:database:drop --if-exists --force --quiet"
