--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,11 +13,9 @@ parameters:
     create_retry_limit: '%env(CREATE_RETRY_LIMIT)%'
     update_machine_dispatch_delay: '%env(UPDATE_MACHINE_DISPATCH_DELAY)%'
     get_retry_limit: '%env(GET_RETRY_LIMIT)%'
-    machine_exists_dispatch_delay: '%env(MACHINE_EXISTS_DISPATCH_DELAY)%'
-    machine_exists_initial_dispatch_delay: '%env(MACHINE_EXISTS_INITIAL_DISPATCH_DELAY)%'
-    exists_retry_limit: '%env(EXISTS_RETRY_LIMIT)%'
     machine_is_active_dispatch_delay: '%env(MACHINE_IS_ACTIVE_DISPATCH_DELAY)%'
     delete_retry_limit: '%env(DELETE_RETRY_LIMIT)%'
+    find_retry_limit: '%env(FIND_RETRY_LIMIT)%'
 
 services:
     # default configuration for services in *this* file
@@ -75,18 +73,18 @@ services:
             $tags:
                 - '%digitalocean_droplet_tag%'
 
-    App\Services\MachineManager\DigitalOceanMachineManager:
+    App\Services\DigitalOceanMachineManager:
         arguments:
             $dropletConfiguration: '@app.digitalocean.droplet_configuration.default'
+
+    App\Services\MachineManagerStack:
+        arguments:
+            $machineManagers:
+                - '@App\Services\DigitalOceanMachineManager'
 
     App\Services\MachineNameFactory:
         arguments:
             $environmentPrefix: '%machine_name_prefix%'
-
-    App\Services\MachineManager\MachineManager:
-        arguments:
-            $machineManagers:
-                - '@App\Services\MachineManager\DigitalOceanMachineManager'
 
     App\Services\RemoteRequestRetryDecider:
         arguments:
@@ -98,16 +96,14 @@ services:
         arguments:
             $delayInMilliseconds: '%machine_is_active_dispatch_delay%'
 
-    app.message_dispatcher.backoff_strategy.machine_exists:
-        class: webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\FixedBackoffStrategy
-        arguments:
-            $delayInMilliseconds: '%machine_exists_dispatch_delay%'
+    app.message_dispatcher.backoff_strategy.find_machine:
+        class: webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\ExponentialBackoffStrategy
 
     webignition\SymfonyMessengerMessageDispatcher\Middleware\DelayedMessage\DelayedMessageMiddleware:
         arguments:
             $backoffStrategies:
                 App\Message\CheckMachineIsActive: '@app.message_dispatcher.backoff_strategy.check_machine_is_active'
-                App\Message\MachineExists: '@app.message_dispatcher.backoff_strategy.machine_exists'
+                App\Message\FindMachine: '@app.message_dispatcher.backoff_strategy.find_machine'
 
     webignition\SymfonyMessengerMessageDispatcher\Middleware\RetryByLimitMiddleware:
         arguments:
@@ -115,7 +111,7 @@ services:
                 App\Message\CreateMachine: '%create_retry_limit%'
                 App\Message\GetMachine: '%get_retry_limit%'
                 App\Message\DeleteMachine: '%delete_retry_limit%'
-                App\Message\MachineExists: '%exists_retry_limit%'
+                App\Message\FindMachine: '%find_retry_limit%'
 
     webignition\SymfonyMessengerMessageDispatcher\MessageDispatcher:
         arguments:
@@ -126,7 +122,6 @@ services:
     App\Services\ExceptionFactory\MachineProvider\ExceptionFactory:
         arguments:
             $factories:
-                - '@App\Services\ExceptionFactory\MachineProvider\DigitalOceanExceptionFactory'
                 - '@App\Services\ExceptionFactory\MachineProvider\GuzzleExceptionFactory'
 
     webignition\JsonMessageSerializerBundle\Services\MessageFactory:
@@ -136,4 +131,4 @@ services:
                 !php/const App\Message\CreateMachine::TYPE: 'App\Message\CreateMachine'
                 !php/const App\Message\DeleteMachine::TYPE: 'App\Message\DeleteMachine'
                 !php/const App\Message\GetMachine::TYPE: 'App\Message\GetMachine'
-                !php/const App\Message\MachineExists::TYPE: 'App\Message\MachineExists'
+                !php/const App\Message\FindMachine::TYPE: 'App\Message\FindMachine'
