--- a/tests/docker/self-compose.yml
+++ b/tests/docker/self-compose.yml
@@ -4,6 +4,9 @@ services:
   app:
     build:
       context: ../..
+      args:
+        DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@postgres:${POSTGRES_EXPOSED_PORT}/basil-worker-db?serverVersion=12&charset=utf8
+        MESSENGER_TRANSPORT_DSN: amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/%2f/messages
     container_name: test-basil-worker-manager
     volumes:
       - ../../var:/app/var:rw
