Install and setup supervisor for rabbitmq

--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,6 @@
         "test-unit": "./vendor/bin/phpunit --colors=always tests/Unit",
         "test-functional": "./vendor/bin/phpunit --colors=always tests/Functional",
         "test-integration-async": "./vendor/bin/phpunit -c phpunit.integration_async.xml",
-        "test-integration-listen": "php bin/console --env=integration_async messenger:consume async -vv",
         "test": [
             "@test-unit",
             "@test-functional"
@@ -117,6 +116,7 @@
             "sleep 2",
             "@db-setup"
         ],
+        "messenger-listen": "php bin/console --env=integration_async messenger:consume async -vv",
         "ci": [
             "@cs",
             "@static-analysis",
