--- a/composer.json
+++ b/composer.json
@@ -107,7 +107,7 @@
             "@test-functional"
         ],
         "integration-pull": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml pull",
-        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d",
+        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d --build",
         "integration-status": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml ps",
         "integration-stop": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml stop",
         "integration-destroy": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml down",
@@ -116,7 +116,7 @@
             "sleep 2",
             "@db-setup"
         ],
-        "messenger-listen": "php bin/console --env=integration_async messenger:consume async -vv",
+        "messenger-listen": "php bin/console messenger:consume async -vv",
         "ci": [
             "@cs",
             "@static-analysis",
