--- a/composer.json
+++ b/composer.json
@@ -102,21 +102,21 @@
         "test-unit": "./vendor/bin/phpunit --colors=always tests/Unit",
         "test-functional": "./vendor/bin/phpunit --colors=always tests/Functional",
         "test-integration-async": "./vendor/bin/phpunit -c phpunit.integration_async.xml",
-        "test-integration-listen": "php bin/console --env=integration_async messenger:consume async -vv",
         "test": [
             "@test-unit",
             "@test-functional"
         ],
-        "integration-pull": "docker-compose -f tests/docker/services-compose.yml pull",
-        "integration-start": "docker-compose -f tests/docker/services-compose.yml up -d",
-        "integration-status": "docker-compose -f tests/docker/services-compose.yml ps",
-        "integration-stop": "docker-compose -f tests/docker/services-compose.yml stop",
-        "integration-destroy": "docker-compose -f tests/docker/services-compose.yml down",
+        "integration-pull": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml pull",
+        "integration-start": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml up -d --build",
+        "integration-status": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml ps",
+        "integration-stop": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml stop",
+        "integration-destroy": "docker-compose -f tests/docker/services-compose.yml -f tests/docker/self-compose.yml down",
         "integration-setup": [
             "@integration-start",
             "sleep 2",
             "@db-setup"
         ],
+        "messenger-listen": "php bin/console messenger:consume async -vv",
         "ci": [
             "@cs",
             "@static-analysis",
