Add nginx instance to integration env

--- a/tests/docker/self-compose.yml
+++ b/tests/docker/self-compose.yml
@@ -1,6 +1,18 @@
 version: "3"
 
 services:
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    ports:
+      - 9090:80
+    links:
+      - app:app
+    volumes:
+      - ../../var/log/nginx:/var/log/nginx:rw
+
   app:
     build:
       context: ../..
